# rules_conjure

./: .gitignore  BUILD  README.md  WORKSPACE  index.bzl
conjure/: BUILD.tpl  conjure.bzl  conjure.tpl
conjure_rust/: BUILD.tpl  conjure_rust.bzl
conjure_rust/cargo/: BUILD.bazel  Cargo.toml  crates.bzl
conjure_rust/cargo/remote/: BUILD.addr2line-0.14.0.bazel  BUILD.adler-0.2.3.bazel  BUILD.ansi_term-0.11.0.bazel  BUILD.atty-0.2.14.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.backtrace-0.3.55.bazel  BUILD.base64-0.12.3.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.chrono-0.4.19.bazel  BUILD.clap-2.33.3.bazel  BUILD.conjure-codegen-0.7.2.bazel  BUILD.conjure-object-0.7.2.bazel  BUILD.conjure-serde-0.7.2.bazel  BUILD.failure-0.1.8.bazel  BUILD.failure_derive-0.1.8.bazel  BUILD.gimli-0.23.0.bazel  BUILD.heck-0.3.1.bazel  BUILD.hermit-abi-0.1.17.bazel  BUILD.itoa-0.4.6.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.80.bazel  BUILD.miniz_oxide-0.4.3.bazel  BUILD.num-integer-0.1.44.bazel  BUILD.num-traits-0.2.14.bazel  BUILD.object-0.22.0.bazel  BUILD.ordered-float-1.1.0.bazel  BUILD.proc-macro-error-1.0.4.bazel  BUILD.proc-macro-error-attr-1.0.4.bazel  BUILD.proc-macro2-1.0.24.bazel  BUILD.quote-1.0.7.bazel  BUILD.regex-1.4.2.bazel  BUILD.regex-syntax-0.6.21.bazel  BUILD.rustc-demangle-0.1.18.bazel  BUILD.ryu-1.0.5.bazel  BUILD.serde-1.0.117.bazel  BUILD.serde_bytes-0.11.5.bazel  BUILD.serde_derive-1.0.117.bazel  BUILD.serde_json-1.0.59.bazel  BUILD.strsim-0.8.0.bazel  (+17 more)
conjure_typescript/: conjure_typescript.bzl  http_archive.bzl
test/: BUILD
(+11 files in other folders)
